force-app/main/default/objects/Time_Entry__c/fields/Activity_Category__c.field-meta.xml
<CustomField>
    <fullName>Activity_Category__c</fullName>
    <description>This must be an exact match for an activity category (for time entries) or expense category (for expenses) in Clio or a new one will be created. It can be left blank. Note: Leave this field blank if your firm uses UTBMS codes and the row contains values for utbms_activity_code and utbms_task_code. Otherwise, a validation error will occur for the row.</description>
    <label>Activity Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>placeholder value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>