force-app/main/default/objects/Time_Entry__c/fields/Activity_Description__c.field-meta.xml
<CustomField>
    <fullName>Activity_Description__c</fullName>
    <label>Activity Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>