force-app/main/default/objects/Time_Entry__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <description>Type of activity from Clio (TimeEntry, ExpenseEntry, etc.)</description>
    <label>Activity Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>