force-app/main/default/objects/Time_Entry__c/fields/Calendar_Event__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Calendar Event</label>
    <referenceTo>Calendar_Event__c</referenceTo>
    <relationshipLabel>Time Entries</relationshipLabel>
    <relationshipName>Time_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>