force-app/main/default/objects/Time_Entry__c/fields/Expense_Type__c.field-meta.xml
<CustomField>
    <fullName>Expense_Type__c</fullName>
    <label>Expense Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SoftCostEntry</fullName>
                <default>true</default>
                <label>SoftCostEntry</label>
            </value>
            <value>
                <fullName>HardCostEntry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>