force-app/main/default/objects/Time_Entry__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <description>This corresponds to the Description field in Clio.</description>
    <label>Note</label>
    <length>64000</length>
    <type>LongTextArea</type>
</CustomField>