force-app/main/default/objects/Time_Entry__c/fields/UTBMS_Task_Code__c.field-meta.xml
<CustomField>
    <fullName>UTBMS_Task_Code__c</fullName>
    <description>Include this column if your firm uses UTBMS codes. Add the task code for the time entry. If your firm does not use UTBMS codes you can delete this column from the template.</description>
    <label>UTBMS Task Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>