force-app/main/default/objects/Time_Entry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>User_Name__c</columns>
    <columns>Matter__c</columns>
    <columns>Date__c</columns>
    <columns>Duration__c</columns>
    <columns>Rate__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Note__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>